Enable ErrorProne on wala.util